[project]
name = "komamripy"
version = "0.0.6"

description = "Pulseq-compatible, high-performance MRI simulation in Python, powered by KomaMRI.jl."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Carlos Castillo Passi" },
    { name = "Anvika Singhal" },
]
maintainers = [
    { name = "Carlos Castillo Passi", email = "cacp@stanford.edu" },
]
keywords = ["MRI", "simulation", "Pulseq", "KomaMRI", "Julia", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "juliacall >=0.9.20",
]

[project.urls]
Homepage = "https://github.com/JuliaHealth/komamripy"
Repository = "https://github.com/JuliaHealth/komamripy"
Issues = "https://github.com/JuliaHealth/komamripy/issues"

[dependency-groups]
dev = [
    "pytest",
    "numpy",
    "ruff",
    "pypulseq",
    "sigpy>=0.1.27",
    # SigPy requires numba>=0.66 on Python 3.14.
    "numba>=0.66",
    "matplotlib>=3.11.0",
]

[tool.uv]
required-version = ">=0.11,<0.12"

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
